Initial awful looking HTML NPC template.

--- a/npcs/html/babita_babs.html
+++ b/npcs/html/babita_babs.html
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="column">
 
-      <div class="section_title">
+      <div class="article_title">
         <a name="traits">
           Traits
         </a>
@@ -106,13 +106,70 @@
           </li>
       </ul>
 
+
+      <hr class="article_divider"/>
+
+
+      <div class="article_title">
+        <a name="stats">
+          Stats
+        </a>
+      </div>
+
+      <div>
+        <span class="field_name"> Armour Class: </span>
+        <span class="field_value"> 15 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Hit Points: </span>
+        <span class="field_value"> 3 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Speed: </span>
+        <span class="field_value"> 25 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Strength: </span>
+        <span class="field_value"> 9 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Dexterity: </span>
+        <span class="field_value"> 10 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Constitution: </span>
+        <span class="field_value"> 11 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Intelligence: </span>
+        <span class="field_value"> 12 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Wisdom: </span>
+        <span class="field_value"> 10 </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Charisma: </span>
+        <span class="field_value"> 19 </span>
+      </div>
+
     </div> <!-- column -->
 
 
 
     <div class="column">
 
-      <div class="section_title">
+
+
+      <div class="article_title">
         <a name="improv">
           Improv
         </a>
@@ -123,8 +180,128 @@
         <span class="field_value"> A curvy young starlet flounces up to the party. &quot;What&#39;s your names?  I&#39;m Babs. What do you think of UAU? Are you new?&quot; </span>
       </div>
 
+      <div>
+        <span class="field_name"> Appearance: </span>
+        <span class="field_value"> Expressive eyebrows; long black lustrous hair; She somehow makes dwarvish chainmail slinky. </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Expressions: </span>
+        <span class="field_value">  &quot;Wotcha!&quot;; &quot;How ya goin&#39;?&quot;; &quot;That&#39;s hot!&quot;; &quot;Like&quot;; &quot;Totally&quot;; swears like a trucker. </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Mannerisms: </span>
+        <span class="field_value"> Shrugs, giggles and rolls eyes frequently. </span>
+      </div>
+
+
+      <hr class="article_divider"/>
+
+
+      <div class="article_title">
+        <a name="acting">
+          Acting
+        </a>
+      </div>
+
+      <div>
+        <span class="field_name"> Motivations: </span>
+        <span class="field_value"> Hopes to become renown across the realms for her beauty;
+ </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Passions: </span>
+        <span class="field_value"> Loves watching lacrosse, gushes endlessly about male player Kluskap. Many tattoos; she shows off less indelicate ones.
+ </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Secrets: </span>
+        <span class="field_value"> Babs is not aware of her psionic abilities but she does know she has a &#39;knack&#39; for drawing attention. She is modest about this, chalking it up to her physique and the qualities of the armors she fashions.
+ </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Vulnerabilities: </span>
+        <span class="field_value"> Until she was discovered by the dwarf fashion designer Purp&#39;l, struggled to hold a job; pays attention only to passions.
+ </span>
+      </div>
+
+
+      <hr class="article_divider"/>
+
+
+      <div class="article_title">
+        <a name="specialties">
+          Specialties
+        </a>
+      </div>
+
+      <div>
+        <span class="field_name"> Skills: </span>
+      </div>
+      <ul>
+          <li>
+            <span class="field_value"> Persuastion; Modelling; </span>
+          </li>
+      </ul>
+
+      <div>
+        <span class="field_name"> Special Abilities: </span>
+        <span class="field_value"> Babs has a subconscious psionic ability that allows her to win over the opinions of others quite easily - She gets advantage on all persuasion checks.
+ </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Attacks: </span>
+        <span class="field_value"> Punch
+ </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Combat Tactics: </span>
+        <span class="field_value"> Will typically breakdown at the site of combat out of fear that any damage would mar her beauty.
+ </span>
+      </div>
+
+      <div>
+        <span class="field_name"> Special Equipment: </span>
+      </div>
+      <ul>
+          <li>
+            <span class="field_value"> Her chainmail is made from light metals forged into surprising strength; it hugs curves </span>
+          </li>
+          <li>
+            <span class="field_value"> does not hinder movement. </span>
+          </li>
+      </ul>
+
     </div> <!-- column -->
 
   </div> <!-- row -->
+
+
+  <hr class="article_divider"/>
+
+
+  <div class="profile">
+
+    <div class="article_title">
+      <a name="story">
+        Story
+      </a>
+    </div>
+
+    <div class="background-story">
+      &lt;p&gt;Raised in the remote Hill Dwarf lumber town of Gontor Rains [any Dwarven village], Babs was always the target of particularly lecherous laborers after their long days of work in the hillside forests and at the mill. Even as a young-un, she realized she had a knack for drawing the gaze of most peoples. A local smithy took a particular liking to her as she blossomed into her &#39;tween years and he would spend countless hours at his forge crafting a unique suit of Dwarven mail just for her.&lt;/p&gt;&lt;p&gt;Once completed, the smith gifted the mail to Babs with the hope that it would win her favor. Instead, it gained the interest of the males in the community who insisted that their small town enter Babs into chain-model contests in the nearby Dwarven city of Queldon [Any Dwarven City]. Needless to say, Babs&#39; subconscious psionics began to mature as she drew the gaze of all kinds of traveling merchants and emissaries. Her career as a model began with a resounding, &#39;bang!&#39;&lt;/p&gt;
+
+    </div>
+
+  </div> <!-- profile -->
+
+
+
 </body>
 </html>
