--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html><head><meta charset="utf-8"/><title>NPC Template</title>
+<html><head><meta charset="utf-8"/><title>{{Npc.name}}</title>
 
 
 
 
 <link href="stylesheet.css">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-	<img src="npc_imgs/{{NPC.Name}}.png">
+	<img src="npc_imgs/{{npc.name}}.png">
 	
 	
 	<script>
