--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -5,7 +5,7 @@
 
 <link href="stylesheet.css">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-	<img src="npc_imgs/{{npc.name}}.png">
+	<img src="npc_imgs/{{npc.name}}.png" width="462" height="500">
 	
 	
 	<script>
