Working away on containers

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html><head><meta charset="utf-8"/><title>{{Npc.name}}</title>
-<link rel=shortcut icon href="favicon.png">
+<link rel="shortcut icon" href="favicon.png">
 
 
-<link href="stylesheet.css">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-	<img src="npc_imgs/{{npc.name}}.png" width="300" height="300" />
-	
+
+
 	
 	<script>
 		function createCustomElement(name, contentNode, elementClass = null) {
@@ -28,11 +27,13 @@
 	
 	</head>
 	
-	
+		
 
 <div class="stat-block wide">
 	<hr class="orange-border" />
 	<div class="section-left">
+		<div class="portrait"><img src="npc_imgs/Albrecht Mukht.png" alt="Albrecht Mukht" />
+</div>
 		<div class="creature-heading">
 			<h1>{{npc.name}}</h1>
 			<h2>Medium construct, unaligned</h2>
@@ -158,3 +159,4 @@
 	<hr class="orange-border bottom" />
 </div> <!-- stat block -->
 
+</html>
