--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -32,8 +32,7 @@
 <div class="stat-block wide">
 	<hr class="orange-border" />
 	<div class="section-left">
-		<div class="portrait"><img src="npc_imgs/Albrecht Mukht.png" alt="Albrecht Mukht" />
-</div>
+	
 		<div class="creature-heading">
 			<h1>{{npc.name}}</h1>
 			<h2>Medium construct, unaligned</h2>
@@ -153,9 +152,18 @@
 				<h4>Slam.</h4>
 				<p><i>Melee Weapon Attack:</i> +4 to hit, reach 5 ft., one target.
         <i>Hit:</i> 5 (1d6 + 2) bludgeoning damage.</p>
-			</div> <!-- property block -->
+			</div> 
+			<!-- property block -->
 		</div> <!-- actions -->
+		<div class="portrait">
+	<img src="npc_imgs/Albrecht Mukht.png"  alt="{{npc.name}}"
+	 style="object-fit:contain;
+            min-width: 280px;
+  			text-align: center;
+            height:auto;
+            ></div>
 	</div> <!-- section right -->
+	
 	<hr class="orange-border bottom" />
 </div> <!-- stat block -->
 
