Pictures, pictures, pictures

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -156,7 +156,7 @@
 			<!-- property block -->
 		</div> <!-- actions -->
 		<div class="portrait">
-	<img src="npc_imgs/Albrecht Mukht.png"  alt="{{npc.name}}"
+	<img src="npc_imgs/{{npc.name}}.png"  alt="npc_imgs/dummy.jpg"
 	 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
