--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -161,7 +161,7 @@
             min-width: 280px;
   			text-align: center;
             height:auto;
-            ></div>
+			"></div>
 	</div> <!-- section right -->
 	
 	<hr class="orange-border bottom" />
