--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -35,7 +35,7 @@
 	
 		<div class="creature-heading">
 			<h1>{{npc.name}}</h1>
-			<h2>Medium construct, unaligned</h2>
+			<h2>Medium humanoid, {{npc.traits.alignment}}</h2>
 		</div> <!-- creature heading -->
 		<svg height="5" width="100%" class="tapered-rule">
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
