--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -73,15 +73,15 @@
 				</div> <!-- ability constitution -->
 				<div class="ability-intelligence">
 					<h4>INT</h4>
-					<p>1 (-5)</p>
+					<p>{{npc.stats.int}} {{npc.stats.intmod}}</p>
 				</div> <!-- ability intelligence -->
 				<div class="ability-wisdom">
 					<h4>WIS</h4>
-					<p>3 (-4)</p>
+					<p>{{npc.stats.wis}} {{npc.stats.wismod}}</p>
 				</div> <!-- ability wisdom -->
 				<div class="ability-charisma">
 					<h4>CHA</h4>
-					<p>1 (-5)</p>
+					<p>{{npc.stats.cha}} {{npc.stats.chamod}}</p>
 				</div> <!-- ability charisma -->
 			</div> <!-- abilities -->
 			<svg height="5" width="100%" class="tapered-rule">
