--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -103,9 +103,22 @@
 			<div class="property-line">
 				<h4>Languages</h4>
 				
-				<p>
+				{{#npc.traits.languages.length}}
+        <div>
+          <span class="field_name"> Languages: </span>
+        </div>
+        <ul>
+      {{/npc.traits.languages.length}}
       {{#npc.traits.languages}}
-			{{/npc.traits.languages}}	{{.}}</p>	</div> <!-- property line -->
+          <li>
+            <span class="field_value"> {{.}} </span>
+          </li>
+      {{/npc.traits.languages}}
+      {{#npc.traits.languages.length}}
+        </ul>
+      {{/npc.traits.languages.length}}
+
+      <div></div> <!-- property line -->
 			<div class="property-line last">
 				<h4>Challenge</h4>
 				<p>1 (200 XP)</p>
