--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -103,22 +103,9 @@
 			<div class="property-line">
 				<h4>Languages</h4>
 				
-				{{#npc.traits.languages.length}}
-        <div>
-          <span class="field_name"> Languages: </span>
-        </div>
-        <ul>
-      {{/npc.traits.languages.length}}
+				<p>
       {{#npc.traits.languages}}
-          <li>
-            <span class="field_value"> {{.}} </span>
-          </li>
-      {{/npc.traits.languages}}
-      {{#npc.traits.languages.length}}
-        </ul>
-      {{/npc.traits.languages.length}}
-
-      <div></div> <!-- property line -->
+			{{/npc.traits.languages}}	{{.}}</p>	</div> <!-- property line -->
 			<div class="property-line last">
 				<h4>Challenge</h4>
 				<p>1 (200 XP)</p>
