--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -101,9 +101,9 @@
 				<p>blindsight 60ft. (blind beyond this radius), passive Perception 6</p>
 			</div> <!-- property line -->
 			<div class="property-line">
-				<h4>{{#npc.traits.languages}}</h4>
+				<h4>Languages</h4>
 				
-				<p>{{.}} {{/npc.traits.languages}}	</p>	
+				<p>{{#npc.traits.languages}}{{.}} {{/npc.traits.languages}}	</p>	
 			</div> <!-- property line -->
 			<div class="property-line last">
 				<h4>Challenge</h4>
