--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -103,7 +103,7 @@
 			<div class="property-line">
 				<h4>Languages</h4>
 				
-				<p>{{#npc.traits.languages}}{{.}}, {{/npc.traits.languages}}	</p>	
+				<p>{{#npc.traits.languages}}{{.}} {{/npc.traits.languages}}	,</p>	
 			</div> <!-- property line -->
 			<div class="property-line last">
 				<h4>Challenge</h4>
