--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -35,8 +35,8 @@
 	
 		<div class="creature-heading">
 			<h1>{{npc.name}}</h1>
-			<h2>{{npc.traits.race}} {{#npcs.traits.subrace.length}}{{.}}{{npcs.traits.subrace.length}} {{npc.traits.alignment}}</h2>
-			<h2>Level {{npctraits.level}} {{npc.traits.class}}</h2>
+			<h2>{{npc.traits.race}} {{#npcs.traits.subrace.length}}{{.}}{{/npcs.traits.subrace.length}} {{npc.traits.alignment}}</h2>
+			<h2>Level {{npc.traits.level}} {{npc.traits.class}}</h2>
 		
 		</div> <!-- creature heading -->
 		<svg height="5" width="100%" class="tapered-rule">
