--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -58,7 +58,7 @@
 				</div> <!-- property line -->
 	<!--			<div class="property-line last">
 				
-<h4>Occupations: </h4>{{#npc.traits.occupation.length}}{{.}}{{/npc.traits.occupation.length}
+<h4>Occupations: </h4>{{#npc.traits.occupation}}{{.}}{{/npc.traits.occupation}
 			</div> <!-- property line -->
 			<div class="property-line last">
 				<h4>Armor Class</h4>
