--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -166,8 +166,8 @@
 	<!--		{{#npc.specialties.special-equipment.length}}
 		<div class="property-block">
 			<h4>Spacial Equipment</h4>
-			<p>{{/npc.specialties.special-equipment.length}}
-        {{#npc.specialties.special-equipment}}</p>
+			<p>{{.}}{{/npc.specialties.special-equipment.length}}
+        </p>
 		</div> <!-- property block -->
 		
 		
