--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -111,7 +111,7 @@
 				<p>TODO Saving Throws</p>
 			</div> <!-- property line -->
 			
-			<div class="property-line first">
+			<div class="property-line last">
 				<h4>Skills</h4>
 			
 	
