--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -116,7 +116,7 @@
 			
 	
 
-<p>{{#npc.specialties.skills.length}}{{.}}{{/npc.specialties.skills.length}}</p>
+<p>{{#npc.specialties.skills}}{{.}}{{/npc.specialties.skills}</p>
 			</div> <!-- property line -->
 			
 			
@@ -152,7 +152,7 @@
 	
 			<div class="property-block">
 			<h4>Special Abilities</h4>
-			<p>{{npc.specialies.special-abilities}}</p>
+			<p>{{npc.specialties.special-abilities}}</p>
 		</div> <!-- property block -->
 		
 	
