--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -152,56 +152,38 @@
 	
 			<div class="property-block">
 			<h4>Special Abilities</h4>
-			<p>{{npc.specialties.special-abilities}}</p>
+			<p>{{#npc.specialties.special-abilities}}{{.}}{{/npc.specialties.special-abilities}}</p>
 		</div> <!-- property block -->
 		
 	
-			<div class="property-block">
-			<h4>Attacks</h4>
-			<p>{{npc.specialties.attacks}}</p>
-		</div> <!-- property block -->
-		
+			
 		
 	
-			{{#npc.specialties.special-equipment.length}}
+			
 		<div class="property-block">
 			<h4>Spacial Equipment</h4>
-			<p>{{.}}{{/npc.specialties.special-equipment.length}}
+			<p>{{#npc.specialties.special-equipment.}}{{.}}{{/npc.specialties.special-equipment}}
         </p>
 		</div> <!-- property block -->
 		
 		
 		
-		<div class="property-block">
-			<h4>Combat Tactics</h4>
-			<p>{{npc.specialties.combat-tactics}}</p>
-		</div> <!-- property block -->
+		<!-- property block -->
 	</div> <!-- section left -->
 	<div class="section-right">
 		<div class="actions">
+			<h3>Combat Tactics</h3>
+			<p>{{npc.specialties.combat-tactics}}</p>
+		</div> 
+		
+		<div class="actions">
 			<h3>Actions</h3>
 			<div class="property-block">
-				<h4>Multiattack.</h4>
-				<p>The armor makes two melee attacks.</p>
-			</div> <!-- property block -->
-			<div class="property-block">
-				<h4>Slam.</h4>
-				<p><i>Melee Weapon Attack:</i> +4 to hit, reach 5 ft., one target.
-        <i>Hit:</i> 5 (1d6 + 2) bludgeoning damage.</p>
-			</div> <!-- property block -->
-		</div> <!-- actions -->
-		<div class="actions">
-			<h3>Legendary Actions</h3>
-			<div class="property-block">
-				<h4>Multiattack.</h4>
-				<p>The armor makes two melee attacks.</p>
-			</div> <!-- property block -->
-			<div class="property-block">
-				<h4>Slam.</h4>
-				<p><i>Melee Weapon Attack:</i> +4 to hit, reach 5 ft., one target.
-        <i>Hit:</i> 5 (1d6 + 2) bludgeoning damage.</p>
-			</div> 
-			<!-- property block -->
+			
+			<p>{{#npc.specialties.attacks}}{{.}}{{/npc.specialties.attacks</p>
+		</div> <!-- property block -->
+		
+			
 		</div> <!-- actions -->
 		<div class="portrait">
 	<img src="npc_imgs/{{npc.name}}.png"  alt="npc_imgs/dummy.jpg"
