--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -116,7 +116,7 @@
 			
 	
 
-<p>{{#npc.specialties.skills}}{{.}}{{/npc.specialties.skills}</p>
+<p>{{#npc.specialties.skills}}{{.}}{{/npc.specialties.skills}}</p>
 			</div> <!-- property line -->
 			
 			
