--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -158,13 +158,24 @@
 	
 			
 		
-	
+	{{#npc.specialties.special-equipment.length}}
 			
 		<div class="property-block">
-			<h4>Spacial Equipment</h4>
-			<p>{{#npc.specialties.special-equipment.}}{{.}}{{/npc.specialties.special-equipment}}
-        </p>
-		</div> <!-- property block -->
+			<h4>Special Equipment</h4>
+			
+		</div> 
+		<ul>
+      {{/npc.specialties.special-equipment.length}}
+        {{#npc.specialties.special-equipment}}
+          <li>
+            <span class="field_value"> {{.}} </span>
+          </li>
+        {{/npc.specialties.special-equipment}}
+      {{#npc.specialties.special-equipment.length}}
+      </ul>
+      {{/npc.specialties.special-equipment.length}}
+
+		<!-- property block -->
 		
 		
 		
