--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -191,7 +191,7 @@
 			<h3>Actions</h3>
 			<div class="property-block">
 			
-			<p>{{#npc.specialties.attacks}}{{.}}{{/npc.specialties.attacks</p>
+			<p>{{#npc.specialties.attacks}}{{.}}{{/npc.specialties.attacks}}</p>
 		</div> <!-- property block -->
 		
 			
