--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -167,14 +167,26 @@ Level {{npc.traits.level}} {{npc.traits.class}}</h2>
         {{/npc.specialties.special-equipment}}
       {{#npc.specialties.special-equipment.length}}
       </ul>
-      {{/npc.specialties.special-equipment.length}}
-
-		<!-- property block -->
+      <p> {{/npc.specialties.special-equipment.length}}
+          <!-- property block -->
+          <!-- property block -->
+      </p>
+       <div class="actions">
+			<h3>Combat Tactics</h3>
+			<p>{{npc.specialties.combat-tactics}}</p>
+		</div> 
 		
+		<div class="actions">
+			<h3>Actions</h3>
+			<div class="property-block">
+			
+			<p>{{#npc.specialties.attacks}}{{.}}{{/npc.specialties.attacks}}</p>
+		</div> <!-- property block -->
 		
+			
+		</div> <!-- actions -->
 		
-		<!-- property block -->
-	</div> <!-- section left -->
+    </div> <!-- section left -->
 	<div class="section-right">
 	<div class="portrait">
 	<img src="npc_imgs/{{npc.name}}.png"  alt="npc_imgs/dummy.jpg"
@@ -218,20 +230,6 @@ Level {{npc.traits.level}} {{npc.traits.class}}</h2>
 			
 			
 			
-		<div class="actions">
-			<h3>Combat Tactics</h3>
-			<p>{{npc.specialties.combat-tactics}}</p>
-		</div> 
-		
-		<div class="actions">
-			<h3>Actions</h3>
-			<div class="property-block">
-			
-			<p>{{#npc.specialties.attacks}}{{.}}{{/npc.specialties.attacks}}</p>
-		</div> <!-- property block -->
-		
-			
-		</div> <!-- actions -->
 		
 	</div> <!-- section right -->
 	
