--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -60,7 +60,7 @@ Level {{npc.traits.level}} {{npc.traits.class}}</h2>
 			</div> <!-- property line -->
 			<div class="property-line">
 				<h4>Hit Points</h4>
-				<p>TODO Hitdice</p>
+				<p>{{npc.stats.hit-points}} (TODO Hitdice)</p>
 			</div> <!-- property line -->
 			<div class="property-line last">
 				<h4>Speed</h4>
