--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -188,7 +188,7 @@ Level {{npc.traits.level}} {{npc.traits.class}}</h2>
     </div> <!-- section left -->
 	<div class="section-right">
 	<div class="portrait">
-	<img src="npc_imgs/{{npc.name}}.png"  alt="npc_imgs/dummy.jpg"
+	<img class="avatar" src="img/one.jpg" alt="Not Found" onerror=this.src="npc_imgs/dummy.jpg" src="npc_imgs/{{npc.name}}.png"  alt="npc_imgs/dummy.jpg"
 	 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
