--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -251,7 +251,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			
 			<div class="actions">
 <h3>Background</h3>
-			<p>{{npc.profile.background-story}</p>
+			<p>{{npc.profile.background-story}}</p>
 				<p>{{npc.profile.personality}}</p>
 		</div> 
 			
