--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -118,7 +118,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			
 	
 
-<p>{{#npc.specialties.special-abilities-proficiences}}{{.}}{{#npc.specialties.special-abilities-proficiences}}</p>
+<p>{{#npc.specialties.special-abilities-proficiences}}{{.}}{{/npc.specialties.special-abilities-proficiences}}</p>
 			</div> <!-- property line -->
 			
 			
