--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -206,7 +206,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
     </div> <!-- section left -->
 	<div class="section-right">
 	<div class="portrait">
-	<img class="avatar" src="img/one.jpg" alt="Not Found" onerror=this.src="npc_imgs/dummy.jpg" src="npc_imgs/{{npc.name}}.png"  alt="npc_imgs/dummy.jpg"
+	<img class="avatar" src="npc_imgs/{{npc.name}}.png" alt="Not Found" onerror=this.src="npc_imgs/dummy.jpg"   
 	 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
@@ -215,7 +215,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		<div class="actions">
 			<h3>Roleplaying Tips</h3>
 			<h4>Introduction</h4>
-			{{npc.improv.introduction}}
+			<p>{{npc.improv.introduction}}</p>
 		</div> 
 		
 		<div class="actions">
