messing with style

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -215,7 +215,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		<div class="actions">
 			<h3>Roleplaying Tips</h3>
 			<h4>Introduction</h4>
-			<p>{{npc.improv.introduction}}</p>
+			<p style="notbold">{{npc.improv.introduction}}</p>
 		</div> 
 		
 		<div class="actions">
