Fixing the damned thing

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -173,7 +173,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
         {{/npc.specialties.special-equipment}}
       {{#npc.specialties.special-equipment.length}}
       
-       {{/npc.specialties.special-equipment.length}}
+      <p> {{/npc.specialties.special-equipment.length}}
           <!-- property block -->
           <!-- property block -->
       </p>
@@ -211,11 +211,11 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
             min-width: 280px;
   			text-align: center;
             height:auto;
-			">
+			"></div>
 		<div class="actions">
 			<h3>Roleplaying Tips</h3>
 			<h4>Introduction</h4>
-			<p style="notbold">{{npc.improv.introduction}}</p>
+			<p>{{npc.improv.introduction}}</p>
 		</div> 
 		
 		<div class="actions">
@@ -251,7 +251,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			
 			<div class="actions">
 <h3>Background</h3>
-			<p>{{{npc.profile.background-story}}}</p>
+			<p>{{npc.profile.background-story}}</p>
 				<p>{{npc.profile.personality}}</p>
 		</div> 
 			
