--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -34,7 +34,7 @@
 	<div class="section-left">
 	
 		<div class="creature-heading">
-		  <h1>{{npc.name}}</h1>
+		  <h1>Motherfuckin {{npc.name}}</h1>
 			<h2>{{npc.traits.age}} {{npc.traits.race}} {{#npcs.traits.subrace}}{{.}}{{/npcs.traits.subrace}}<br>
 {{npc.traits.alignment}}<br>
 Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
