--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -220,7 +220,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		
 		<div class="actions">
 			<h4>Appearance</h4>
-			<p>{{npc.improv.appearance}}</p>
+		<span>	<p>{{npc.improv.appearance}}</p></span>
 		</div> 
 		
 		<div class="actions">
