--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -205,13 +205,13 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		
     </div> <!-- section left -->
 	<div class="section-right">
-	<div class="portrait">
-	<img class="avatar" src="npc_imgs/{{npc.name}}.png" alt="Not Found" onerror=this.src="npc_imgs/dummy.jpg"   
+	
+	<img class="avatar" src="npc_imgs/{{npc.name}}.png" alt="Not Found"  
 	 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
             height:auto;
-			"></div>
+			">
 		<div class="actions">
 			<h3>Roleplaying Tips</h3>
 			<h4>Introduction</h4>
