--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -206,7 +206,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
     </div> <!-- section left -->
 	<div class="section-right">
 	
-	<img class="avatar" src="npc_imgs/{{npc.name}}.png" alt="Not Found"  
+	<img src="npc_imgs/{{npc.name}}.png" alt="Not Found"  
 	 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
@@ -251,7 +251,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			
 			<div class="actions">
 <h3>Background</h3>
-			<p>{{npc.profile.background-story}}</p>
+			<p>{{{npc.profile.background-story}}}</p>
 				<p>{{npc.profile.personality}}</p>
 		</div> 
 			
