--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -206,10 +206,10 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
     </div> <!-- section left -->
 	<div class="section-right">
 	
-	<img id="portrait" src="npc_imgs/{{npc.name}}.png" onerror="this.onerror=null; this.src='npcimgs/dummy.png'" alt="" width="100" height="120">
+	<img id="portrait" src="npc_imgs/{{npc.name}}.png" onerror="this.onerror=null; this.src='npcimgs/dummy.jpg'" alt="" width="300" height=auto>
 		
 		
-	<img src="npc_imgs/{{npc.name}}.png" alt="Not Found"  
+	<img src="npc_imgs/{{npc.name}}.jpg" alt="Not Found"  
 	 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
