--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -214,11 +214,11 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
             min-width: 280px;
   			text-align: center;
             height:auto;
-			">
+			" onerror="this.onerror=null; this.src='npcimgs/dummy.jpg'">
 		<div class="actions">
 			<h3>Roleplaying Tips</h3>
 			<h4>Introduction</h4>
-			<span>{{npc.improv.introduction}}</span>
+			<span><p>{{npc.improv.introduction}}</p></span>
 		</div> 
 		
 		<div class="actions">
@@ -228,34 +228,34 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		
 		<div class="actions">
 			<h4>Expressions</h4>
-			<p>{{npc.improv.expressions}}</p>
+			<span><p>{{npc.improv.expressions}}</p></span>
 		</div> 
 		
 		<div class="actions">
 			<h4>Mannerisms</h4>
-			<p>{{npc.improv.mannerisms}}</p>
+			<span><p>{{npc.improv.mannerisms}}</p></span>
 		</div> 
 		
 		<div class="actions">
 			<h4>Motivations</h4>
-			<p>{{npc.acting.motivations}}</p>
+			<span><p>{{npc.acting.motivations}}</p></span>
 		</div> 
 		
 			
 			<div class="actions">
 			<h4>Passions</h4>
-			<p>{{npc.acting.passions}}</p>
+			<span><p>{{npc.acting.passions}}</p></span>
 		</div> 
 		
 		<div class="actions">
 <h4>Secrets</h4>
-			<p>{{npc.acting.secrets}}</p>
+	<span><p>{{npc.acting.secrets}}</p></span>		
 		</div> 
 			
 			<div class="actions">
 <h3>Background</h3>
-			<p>{{{npc.profile.background-story}}}</p>
-				<p>{{npc.profile.personality}}</p>
+		<span>	<p>{{{npc.profile.background-story}}}</p></span>
+		<span>	<p>{{npc.profile.personality}}</p></span>	
 		</div> 
 			
 			
