--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -118,7 +118,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			
 	
 
-<p>{{#npc.specialties.special-abilities-proficiences}}{{.}}{{/npc.specialties.special-abilities-proficiences}}</p>
+<p>&nbsp;TODO {{#npc.specialties.special-abilities-proficiences}}{{.}}{{/npc.specialties.special-abilities-proficiences}}</p>
 			</div> <!-- property line -->
 			
 			
@@ -209,8 +209,8 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	
 		
 		
-	<img id="portrait" src="npc_imgs/{{npc.name}}.jpg" alt="Not Found"  onerror="this.onerror=null; this.src='npcimgs/dummy.jpg'"
-	 style="object-fit:contain;
+	<img id="portrait" src="npc_imgs/{{npc.name}}.jpg" alt="" 
+		 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
             height:auto;
