--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -209,7 +209,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	
 		
 		
-	<img id="portrait" src="npc_imgs/{{npc.name}}.jpg" alt="" 
+	<img id="portrait" src="npc_imgs/{{npc.name}}.png" alt="" 
 		 style="object-fit:contain;
             min-width: 280px;
   			text-align: center;
